# CompSoc-Website

./: .eslintrc.js  .gitignore  .prettierignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  STYLE_GUIDE.md  app.vue  bun.lockb  config.toml  docker-compose.yml  flake.nix  missing-hashes.json  nextauthworkaround.sh  nuxt.config.ts  package-lock.json  package.json  package.nix  pnpm-lock.yaml  run_dev.sh  tsconfig.json  uno.config.ts  vercel.json
.github/: eslint.yml
components/: Card.vue  Clippy.vue  DarkToggle.vue  ErrorBoundary.vue  Footer.vue  Header.vue  Join.vue  Login.vue  Logo.vue  LogoText.vue  SGD.vue  Spinner.vue  Switch.vue  Terminal.vue  TerminalMarker.vue
components/Advert/: Bounce.vue  Card.vue  Event.vue  index.vue  types.ts
components/SVG/: Discord.vue  ExternalLink.vue  Facebook.vue  Github.vue  IconBack.vue  Instagram.vue  Star.vue  (+3 more)
composables/: auth.ts  time.ts
content/: test.md
envfiles/: .env.dev
layouts/: advert.vue  default.vue  review.vue
macros/: Cargo.toml
middleware/: auth-admin.ts  auth-protected.ts  auth.global.ts
pages/: _index.md  about.vue  constitution.vue  db.vue  discord.vue  events.vue  index.vue  join.vue  login.vue  onboarding.vue  protected.vue  sgd.vue  signin.vue  slides.vue  terminal.vue  users.vue
plugins/: trpcClient.ts
prisma/: schema.prisma  utils.ts
src/: engines.rs  fairings.rs  main.rs  routes.rs
static/: main.css
stores/: auth.ts  event.ts
templates/: base.html.tera  index.html.tera
utils/: advert.ts  array.ts  jwt.ts  mail.ts  redirect.ts  roles.ts  sgd.ts  time.ts
(+134 files in other folders)
