[package]
name = "comp-soc-website"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rsass = "0.27.0"
walkdir = "2"
path-absolutize = "3.0.14"
yew = { version = "0.20.0", features = ["ssr"] }

macros = { path = "./macros" }
